refactor doc generation for methods and functions